--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "crypto": "^1.0.1",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
+    "node-geocoder": "^4.0.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -51,6 +52,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
+    "@types/node-geocoder": "^3.24.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
